0.19.1	UNRELEASED

 IMPROVEMENTS

  * Add 'dulwich.mailmap' file for reading mailmap files.
    (Jelmer Vernooĳ)

  * Dulwich no longer depends on urllib3[secure]. Instead,
    "dulwich[https]" can be used to pull in the necessary
    dependencies for HTTPS support. (Jelmer Vernooĳ, #616)

  * Support the `http.sslVerify` and `http.sslCAInfo`
    configuration options. (Jelmer Vernooĳ)

 API CHANGES

  * Index.iterblobs has been renamed to Index.iterobjects.
   (Jelmer Vernooĳ)

0.19.0	2018-03-10

 BUG FIXES

  * Make `dulwich.archive` set the gzip header file modification time so that
    archives created from the same Git tree are always identical.
    (#577, Jonas Haag)

  * Allow comment characters (#, ;) within configuration file strings
    (Daniel Andersson, #579)

  * Raise exception when passing in invalid author/committer values
    to Repo.do_commit(). (Jelmer Vernooĳ, #602)

 IMPROVEMENTS

  * Add a fastimport ``extra``. (Jelmer Vernooĳ)

  * Start writing reflog entries. (Jelmer Vernooĳ)

  * Add ability to use password and keyfile ssh options with SSHVendor. (Filipp Kucheryavy)

  * Add ``change_type_same`` flag to ``tree_changes``.
    (Jelmer Vernooĳ)

 API CHANGES

  * ``GitClient.send_pack`` now accepts a ``generate_pack_data``
    rather than a ``generate_pack_contents`` function for
    performance reasons. (Jelmer Vernooĳ)

  * Dulwich now uses urllib3 internally for HTTP requests.
    The `opener` argument to `dulwich.client.HttpGitClient` that took a
    `urllib2` opener instance has been replaced by a `pool_manager` argument
    that takes a `urllib3` pool manager instance.
    (Daniel Andersson)

0.18.6	2017-11-11

 BUG FIXES

  * Fix handling of empty repositories in ``porcelain.clone``.
   (#570, Jelmer Vernooĳ)

  * Raise an error when attempting to add paths that are not under the
    repository. (Jelmer Vernooĳ)

  * Fix error message for missing trailing ]. (Daniel Andersson)
